templates/xtc5/stylesheet.css
/* ... */
#productinfoprice .stockimagetext {
margin:0;
padding:0;
font-size:11px;
font-weight:normal;
color:#999;
}
p.productinfoproductadded {
font-size:11px;
}
.productoptions {
background-color:#f8f8f8;
padding:6px;
border:solid #ccc;
border-width:1px 0 0 0;
}
.addtobasket {
background-color:#ededed;
padding:6px;
text-align:right;
border:#999 solid;
border-width:1px 0 0 0;
}
/* POPUPS PRODUCTINFO */
body.popupproductinfo {
padding:15px;
background:#fff none;
}
/* POPUP print_order.html */
body.popupprintorder {
font-family:Arial, Sans-serif;
font-size:13px;
padding:15px;
background:#fff none;
}
body.popupprintorder .products tr.header td {
font-weight:bold;
background-color:#ededed;
}
body.popupprintorder .products .total {
text-align:right;
}
body.popupprintorder .products .quantity {
vertical-align:top;
}
body.popupprintorder .productname {
vertical-align:top;
}
body.popupprintorder .model {
vertical-align:top;
}
body.popupprintorder .singleprice {
vertical-align:top;
}
body.popupprintorder .totalprice {
vertical-align:top;
}
/* HIGHLIGHTBOX (BACKGROUND) */
div.highlightbox {
padding:15px;
background-color:#f8f8f8;
border:solid #d9d9d9 1px;
overflow:auto;
}
div.highlightbox ul {
margin-left:15px;
padding:0;
display:block;
list-style-type:square;
line-height:20px;
}
div.highlightbox h1 {
color:#893769;
padding:0 0 10px 0;
margin:0;
border:none;
font-size:16px;
}
div.highlightbox div.hr {
height:1px;
line-height:1px;
margin:0;
padding:0;
display:block;
border-bottom:solid 1px #eee;
}
/* PAYMENT TYPE SELECTION */
table.paymentblock {
background-color:#f8f8f8;
border:#eee solid;
border-width:0 1px 1px 1px;
margin-bottom:15px;
}
table.paymentblock tr td.header {
background-color:#ccc;
padding:2px;
padding-left:5px;
color:#fff;
font-weight:bold;
}
/* SHIPPING TYPE SELECTION */
table.shippingblock {
background-color:#f8f8f8;
border:#eee solid;
border-width:0 1px 1px 1px;
margin-bottom:15px;
}
table.shippingblock tr td.header {
background-color:#ccc;
padding:2px 2px 2px 5px;
color:#fff;
font-weight:bold;
}
table.shippingblock tr td {
vertical-align:top;
}
table.shippingblock tr td.description {
width:100%;
vertical-align:top;
padding-left:6px;
}
table.shippingblock tr td.radiobutton {
vertical-align:top;
white-space:nowrap;
padding:4px;
}
table.shippingblock tr td.radiobutton input {
margin:0;
padding:0;
}
table.shippingblock tr td.price {
vertical-align:top;
white-space:nowrap;
}
/* ORDER DETAILS IN ACCOUNT HISTORY */
table.accounthistoryinfoorderdetails tr td {
vertical-align:top;
}
table.accounthistoryinfoorderdetails tr.header td {
font-weight:bold;
}
/* MESSAGEBOX ON CONTACT SITE */
textarea.message_body {
width:130px;
}
/* DOWNLOAD BOX FOR USER DOWNLOADS */
table.downloadbox {
padding:5px;
background-color:#f8f8f8;
border:solid #d9d9d9 1px;
margin-bottom:8px;
}
table.downloadbox tr td.icon {
padding-right:15px;
}
table.downloadbox tr td.downloadlink {
width:100%;
}
/* TABLE WICH SHOWS GRADUATED PRICES */
table.graduatedprice {
font-size:11px;
text-align:left;
margin-top:5px;
}
table.graduatedprice tr td.header {
font-size:12px;
font-weight:bold;
text-align:left;
}
/* ORDER DETAILS */
table.orderdetails {
font-size:11px;
background-color:#f8f8f8;
border:#ccc solid;
border-width:0 1px 1px 1px;
}
table.orderdetails tr td {
padding:4px;
}
table.orderdetails tr.headerrow td {
background-color:#ccc;
color:#555;
font-weight:bold;
}
table.orderdetails tr.headerrow td.left {
text-align:left;
}
table.orderdetails tr.headerrow td.center {
text-align:center;
}
table.orderdetails tr.headerrow td.right {
text-align:right
}
/* ORDER DETAILS CONTENT ROW 1 */
table.orderdetails tr.contentrow1 td {
background-color:#f8f8f8;
vertical-align:top;
}
table.orderdetails tr.contentrow1 td.quantity {
text-align:center;
}
table.orderdetails tr.contentrow1 td.quantity input {
font-size:11px;
padding:2px;
border:solid #ccc 1px;
}
table.orderdetails tr.contentrow1 td.productname {
text-align:left;
}
/* ORDER DETAILS CONTENT ROW 2 */
table.orderdetails tr.contentrow2 td {
background-color:#f8f8f8;
vertical-align:top;
}
table.orderdetails tr.contentrow2 td.quantity {
text-align:center;
}
table.orderdetails tr.contentrow2 td.quantity input {
font-size:11px;
padding:2px;
border:solid #ccc 1px;
}
table.orderdetails tr.contentrow2 td.productname {
text-align:left;
}
/* ORDER DETAILS SINGLE PRICE */
table.orderdetails tr td.singleprice {
text-align:right;
white-space:nowrap;
}
/* ORDER DETAILS TOTAL PRICE PER ITEM */
table.orderdetails tr td.totalprice {
text-align:right;
white-space:nowrap;
}
/* ORDER DETAILS DELETE CHECKBOX */
table.orderdetails tr td.delete {
text-align:center;
white-space:nowrap;
}
/* ORDER DETAILS PRODUCT ATTRIBUTES */
table.orderdetails tr td.productname table.productattributes {
margin-top:3px;
}
table.orderdetails tr td.productname table.productattributes tr td {
padding:0;
}
table.orderdetails tr td.productname table.productattributes tr td.attribute {
padding-right:4px;
}
table.orderdetails tr td.productname table.productattributes tr td.value {
width:100%;
}
/* ORDER DETAILS SUBTOTAL */
table.orderdetails tr td.subtotal {
background-color:#f8f8f8;
text-align:right;
border:#ccc solid;
border-width:1px 0 0 0;
}
/* PRODUCT NAVIGATOR */
div.productnavigator {
background-color:#ededed;
padding:8px;
border:#999 1px solid;
}
/* REVIEW LIST */
table.reviewlist {
background-color:#f8f8f8;
border:#ccc solid;
border-width:0 1px 1px 1px;
}
table.reviewlist tr td {
padding:4px;
white-space:nowrap;
}
table.reviewlist tr.header td {
background-color:#ccc;
color:#fff;
font-weight:bold;
}
table.reviewlist tr.contentrow1 td {
background-color:#f8f8f8;
}
table.reviewlist tr.contentrow2 td {
background-color:#f8f8f8;
}
textarea#review {
width:95%;
}
/* MEDIA LIST */
table.medialist {
background-color:#f8f8f8;
border:#ccc 1px solid;
}
table.medialist tr td {
padding:6px;
white-space:nowrap;
vertical-align:top;
}
table.medialist tr.contentrow1 td {
background-color:#f8f8f8;
}
/* ... */

